# ashare-research-lab

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
configs/: audit.yaml  backtest.yaml  data.yaml  data_dictionary.yaml  factors.yaml  llm.yaml  scoring.yaml  scoring_hs300_daily_exploratory.yaml  service.yaml  universe.yaml  validation.yaml  watchlist.example.csv
docs/: backtest_assumptions.md  build_data_dictionary.py  data_dictionary.md  factor_definitions.md  historical_pit_universe.md  personal_maintenance.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
notebooks/: factor_exploration.ipynb
scripts/: build_fixtures.py  run_hs300_daily_research.sh
tests/: test_announcement_body_store.py  test_announcement_cli.py  test_announcement_ingest.py  test_announcement_rules.py  test_ashare_skill.py  test_asof.py  test_audit_artifacts.py  test_audit_config.py  test_audit_context.py  test_audit_fingerprint.py  test_audit_git.py  test_audit_hashing.py  test_audit_manifest.py  test_audit_run_store.py  test_backtest_benchmark.py  test_backtest_broker.py  test_backtest_cli.py  test_backtest_config.py  test_backtest_metrics.py  test_backtest_schedule.py  test_backtest_signals.py  test_candidate_scan.py  test_daily_report.py  test_daily_report_cli.py  test_data_dictionary_consistency.py  test_data_quality_gate.py  test_db.py  test_event_study.py  test_event_study_cli.py  test_factor_cli.py  test_factor_report.py  test_factor_store_audit.py  test_factors.py  test_fixtures.py  test_followups.py  test_ingest_cli.py  (+45 more)
(+166 files in other folders)
